--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "composite": true,
+    "disableSourceOfProjectReferenceRedirect": true,
+    "disableSizeLimit": true,
+    "types": ["element-plus/global"]
+  }
 }
